# scrivener-mcp

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
src/scrivener_mcp/: __init__.py  server.py
src/scrivener_mcp/app/: __init__.py  main.py
src/scrivener_mcp/app/static/: app.js  index.html  style.css
src/scrivener_mcp/scrivener/: __init__.py  binder.py  project.py  rtf.py
