[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrivener-mcp"
version = "0.1.0"
description = "MCP server for Scrivener writing projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "striprtf>=0.0.26",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
scrivener-mcp = "scrivener_mcp.server:main"
scrivener-app = "scrivener_mcp.app.main:run_app"

[tool.hatch.build.targets.wheel]
packages = ["src/scrivener_mcp"]
