[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrivener-mcp"
version = "0.1.0"
description = "Read-only MCP server for Scrivener writing projects - AI companion for your manuscript"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["scrivener", "mcp", "ai", "writing", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "mcp>=1.0.0",
    "striprtf>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/zaphodsdad/scrivener-mcp"
Repository = "https://github.com/zaphodsdad/scrivener-mcp"

[project.scripts]
scrivener-mcp = "scrivener_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scrivener_mcp"]
